# setup.cfg file at the root directory
[metadata]
name = ebyte-lora-e220
version = 0.0.3
author = Renzo Mischianti
description = LoRa EBYTE E220 device library complete and tested with Arduino, esp8266, esp32, STM32 and Raspberry Pi Pico. LLCC68
long_description = Ebyte E220 LoRa (Long Range) library device very cheap and very long range (from 5Km to 10Km). Arduino LoRa EBYTE E220 device library complete and tested with Arduino, esp8266, esp32, STM32 and Raspberry Pi Pico. LLCC68
url = https://github.com/xreef/EByte_LoRa_E220_micropython_library
keywords = LoRa, UART, EByte, esp32, esp8266, stm32, SAMD, Arduino, Raspberry Pi Pico, MicroPython
[options]
python_requires = >=3.7
# install_requires =
#     pandas
# [options.extras_require]
# test =
#     pytest
#     coverage
[options.package_data]
sample = ['examples/*']
[options.packages.find]
where = src
# [options.entry_points]
# console_scripts =
#     sample=sample:main
# [bdist_wheel]
# universal = 1

